added package for book, small refactor code.